<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencydriverapp.Fragments.UserInformationFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginandPad"
        android:text="@string/location"
        android:background="@drawable/location_txtview_border"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1"
           android:background="@drawable/right_border">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/full_name"

               android:paddingLeft="@dimen/marginPadBelow"
               android:paddingTop="@dimen/marginPadBelow"
              />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/department_name"
               android:paddingLeft="@dimen/marginPadBelow"
               android:paddingTop="@dimen/marginPadBelow"
               />
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/marginandPad"
                android:text="@string/distance"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
