<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunain.emergencydriverapp.GetRequestFragment"
    android:layout_margin="20dp">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#FFFF">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:src="@drawable/sampleuser"

            />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userImage"

            android:layout_toEndOf="@+id/userImage"
            android:layout_toRightOf="@+id/userImage"
            android:text="TextView" />

        <TextView
            android:id="@+id/userProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/userImage"
            android:layout_toRightOf="@+id/userImage"
            android:text="@string/problem" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@+id/userImage"
            android:layout_toEndOf="@+id/userImage"
            android:layout_toRightOf="@+id/userImage" />

    </RelativeLayout>

    <Button
        android:id="@+id/accept"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/green"
        android:text="@string/accept"

        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/reject"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accept"
        android:layout_alignBottom="@+id/accept"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@color/red"

        android:text="@string/reject"

        android:textColor="#FFFFFF" />


</RelativeLayout>
